# non-exhaustive

./: CHANGELOG.md  Cargo.toml  README.md
src/: doc.md  lib.rs
