[package]
name = "non-exhaustive"
version = "0.1.0"
edition = "2021"
categories = ["development-tools", "no-std::no-alloc"]
description = "macro to allow struct expressions of non_exhaustive structs"
keywords = ["macro", "structs", "non_exhaustive"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ModProg/non-exhaustive"
documentation = "https://docs.rs/non-exhaustive"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = '## \[Unreleased\]'
replace = """
<!-- ## [Unreleased] -->
## [{{version}}] - {{date}}\
"""
[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = '\[unreleased\]: (.*)/(v.*)\.\.\.HEAD'
replace = """
[unreleased]: $1/{{tag_name}}...HEAD
[{{version}}]: $1/$2...{{tag_name}}\
"""
